# MyRepo

./: .gitignore  New框架图.pptx  README.md
AI_Registration/: .gitignore  SaveResultData.py  Style_trans.py  Wave.py  chessboard.py  datasets.py  models.py  readme.md  regis_data.xlsx  test.py  train.py  utils.py
AI_Registration/DRR_modules/: ProjectorsModule.py  RigidMotionModule.py
Awesome-Marp/: README-en.md  README.md  WeekMeeting.md  dd.py
Awesome-Marp/files/: AwesomeMarp_blue.html  AwesomeMarp_blue.md  AwesomeMarp_brown.html  AwesomeMarp_brown.md  AwesomeMarp_dark.html  (+7 more)
DRR_Proj_Python/: .gitignore  DRR.py  readme.md  update.sh
DRR_Proj_Python/CUDA_DigitallyReconstructedRadiographs-master/SiddonClassLib/src/: CMakeLists.txt
DRR_Proj_Python/CUDA_DigitallyReconstructedRadiographs-master/SiddonClassLib/src/SiddonLib/: siddon_class.cu  siddon_class.cuh
ModelConverter/: ModelConverter.py  model.py
PyTorch-CycleGAN-master-master/: datasets.py  models.py  test_1.py  train_1.py
Single_AI_Registration2.0/: ClassifyNetwork.py  ParamTrans.py  Parameters.py  ReadCenter.py  SaveResultData.py  chessboard.py  datasets.py  del.py  detect.py  location.py  mTRE.py  model.py  model_converter.py  onnx.py  point2plane.py  readme.md  regis_data.xlsx  requirements.txt  segment.py  test.py  train.py  tt.py  util.py
Single_AI_Registration2.0_BN/: .gitignore  ParamTrans.py  Parameters.py  SaveResultData.py  Style_trans.py  Wave.py  chessboard.py  datasets.py  detect.py  model.py  readme.md  regis_data.xlsx  segment.py  test.py  test_fusion.py  train.py  util.py
(+65 files in other folders)
